--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,18 @@
 *.pyc
+*.db
+*.sqlite
+*.log
+.dap-breakpoints
+*.swp
+*.cache
+projects
+nov-places
+*.data
+.org-id-locations
+*.db
+
+
+
 backups/
 auto-save-list/
 savehist
@@ -12,3 +26,11 @@ main.el
 tramp
 .lsp-session*
 emojis/
+bookmarks
+games/
+eln-cache/
+straight/
+url/
+request/
+
+
